// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WordAdventure Snapshot Tests > renders gameOver state after losing all lives 1`] = `
<div>
  <div
    class="min-h-screen bg-slate-50 font-sans text-slate-800 relative"
    dir="rtl"
  >
    <div
      class="absolute inset-0 pointer-events-none opacity-20 overflow-hidden"
    >
      <div
        class="absolute -top-20 -right-20 w-96 h-96 bg-purple-300 rounded-full blur-3xl"
      />
      <div
        class="absolute bottom-0 left-0 w-80 h-80 bg-blue-300 rounded-full blur-3xl"
      />
    </div>
    <div
      class="relative z-10 max-w-4xl mx-auto p-4"
    >
      <div
        class="flex justify-between items-center mb-6 bg-white/80 backdrop-blur rounded-2xl p-3 shadow-md"
      >
        <div
          class="flex gap-1"
        >
          <button
            aria-label="מסך הבית"
            class="p-2.5 rounded-xl text-purple-600 hover:bg-purple-50 active:scale-90 transition-transform"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-house"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
              />
              <path
                d="M3 10a2 2 0 0 1 .709-1.528l7-6a2 2 0 0 1 2.582 0l7 6A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
              />
            </svg>
          </button>
          <button
            aria-label="חנות ההפתעות"
            class="p-2.5 rounded-xl text-yellow-600 hover:bg-yellow-50 active:scale-90 transition-transform"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-shopping-bag"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 10a4 4 0 0 1-8 0"
              />
              <path
                d="M3.103 6.034h17.794"
              />
              <path
                d="M3.4 5.467a2 2 0 0 0-.4 1.2V20a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6.667a2 2 0 0 0-.4-1.2l-2-2.667A2 2 0 0 0 17 2H7a2 2 0 0 0-1.6.8z"
              />
            </svg>
          </button>
          <button
            aria-label="התיק שלי"
            class="p-2.5 rounded-xl text-blue-600 hover:bg-blue-50 active:scale-90 transition-transform"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-backpack"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 10a4 4 0 0 1 4-4h8a4 4 0 0 1 4 4v10a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2z"
              />
              <path
                d="M8 10h8"
              />
              <path
                d="M8 18h8"
              />
              <path
                d="M8 22v-6a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v6"
              />
              <path
                d="M9 6V4a2 2 0 0 1 2-2h2a2 2 0 0 1 2 2v2"
              />
            </svg>
          </button>
        </div>
        <div
          class="flex gap-4 items-center font-bold text-lg"
        >
          <span
            class="flex items-center gap-1 text-yellow-600"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-trophy"
              fill="none"
              height="18"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 14.66v1.626a2 2 0 0 1-.976 1.696A5 5 0 0 0 7 21.978"
              />
              <path
                d="M14 14.66v1.626a2 2 0 0 0 .976 1.696A5 5 0 0 1 17 21.978"
              />
              <path
                d="M18 9h1.5a1 1 0 0 0 0-5H18"
              />
              <path
                d="M4 22h16"
              />
              <path
                d="M6 9a6 6 0 0 0 12 0V3a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1z"
              />
              <path
                d="M6 9H4.5a1 1 0 0 1 0-5H6"
              />
            </svg>
             
            0
          </span>
          <span
            class="relative inline-block text-2xl"
            data-testid="avatar-with-gear"
          >
            <span>
              🧙
            </span>
          </span>
        </div>
      </div>
      <div
        class="text-center py-10 bg-white rounded-3xl shadow-xl"
      >
        <div
          aria-label="Game Over"
          class="text-8xl mb-4"
          role="img"
        >
          😢
        </div>
        <h2
          class="text-4xl font-bold mb-6"
        >
          אוי לא!
        </h2>
        <div
          class="flex justify-center gap-4"
        >
          <button
            aria-label="Go to main menu"
            class="px-6 py-3 bg-slate-100 rounded-xl font-bold hover:bg-slate-200 transition-colors"
          >
            לתפריט
          </button>
          <button
            aria-label="Play again"
            class="px-6 py-3 bg-purple-600 text-white rounded-xl font-bold hover:bg-purple-700 transition-colors"
          >
            שחק שוב
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WordAdventure Snapshot Tests > renders levelComplete state after answering all words correctly 1`] = `
<div>
  <div
    class="min-h-screen bg-slate-50 font-sans text-slate-800 relative"
    dir="rtl"
  >
    <div
      class="absolute inset-0 pointer-events-none opacity-20 overflow-hidden"
    >
      <div
        class="absolute -top-20 -right-20 w-96 h-96 bg-purple-300 rounded-full blur-3xl"
      />
      <div
        class="absolute bottom-0 left-0 w-80 h-80 bg-blue-300 rounded-full blur-3xl"
      />
    </div>
    <div
      class="relative z-10 max-w-4xl mx-auto p-4"
    >
      <div
        class="flex justify-between items-center mb-6 bg-white/80 backdrop-blur rounded-2xl p-3 shadow-md"
      >
        <div
          class="flex gap-1"
        >
          <button
            aria-label="מסך הבית"
            class="p-2.5 rounded-xl text-purple-600 hover:bg-purple-50 active:scale-90 transition-transform"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-house"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
              />
              <path
                d="M3 10a2 2 0 0 1 .709-1.528l7-6a2 2 0 0 1 2.582 0l7 6A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
              />
            </svg>
          </button>
          <button
            aria-label="חנות ההפתעות"
            class="p-2.5 rounded-xl text-yellow-600 hover:bg-yellow-50 active:scale-90 transition-transform"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-shopping-bag"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 10a4 4 0 0 1-8 0"
              />
              <path
                d="M3.103 6.034h17.794"
              />
              <path
                d="M3.4 5.467a2 2 0 0 0-.4 1.2V20a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6.667a2 2 0 0 0-.4-1.2l-2-2.667A2 2 0 0 0 17 2H7a2 2 0 0 0-1.6.8z"
              />
            </svg>
          </button>
          <button
            aria-label="התיק שלי"
            class="p-2.5 rounded-xl text-blue-600 hover:bg-blue-50 active:scale-90 transition-transform"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-backpack"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 10a4 4 0 0 1 4-4h8a4 4 0 0 1 4 4v10a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2z"
              />
              <path
                d="M8 10h8"
              />
              <path
                d="M8 18h8"
              />
              <path
                d="M8 22v-6a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v6"
              />
              <path
                d="M9 6V4a2 2 0 0 1 2-2h2a2 2 0 0 1 2 2v2"
              />
            </svg>
          </button>
        </div>
        <div
          class="flex gap-4 items-center font-bold text-lg"
        >
          <span
            class="flex items-center gap-1 text-yellow-600"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-trophy"
              fill="none"
              height="18"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 14.66v1.626a2 2 0 0 1-.976 1.696A5 5 0 0 0 7 21.978"
              />
              <path
                d="M14 14.66v1.626a2 2 0 0 0 .976 1.696A5 5 0 0 1 17 21.978"
              />
              <path
                d="M18 9h1.5a1 1 0 0 0 0-5H18"
              />
              <path
                d="M4 22h16"
              />
              <path
                d="M6 9a6 6 0 0 0 12 0V3a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1z"
              />
              <path
                d="M6 9H4.5a1 1 0 0 1 0-5H6"
              />
            </svg>
             
            1620
          </span>
          <span
            class="relative inline-block text-2xl"
            data-testid="avatar-with-gear"
          >
            <span>
              🧙
            </span>
          </span>
        </div>
      </div>
      <div
        class="text-center py-10 bg-white rounded-3xl shadow-xl"
      >
        <div
          aria-label="Success"
          class="text-8xl mb-4"
          role="img"
        >
          🏆
        </div>
        <h2
          class="text-4xl font-bold mb-6"
        >
          Woohoo!
        </h2>
        <div
          class="flex justify-center gap-4"
        >
          <button
            aria-label="Go to main menu"
            class="px-6 py-3 bg-slate-100 rounded-xl font-bold hover:bg-slate-200 transition-colors"
          >
            לתפריט
          </button>
          <button
            aria-label="Play again"
            class="px-6 py-3 bg-purple-600 text-white rounded-xl font-bold hover:bg-purple-700 transition-colors"
          >
            שחק שוב
          </button>
        </div>
      </div>
    </div>
    <div
      class="fixed inset-0 z-50 flex items-center justify-center p-4 bg-black/40 backdrop-blur-sm"
    >
      <div
        class="bg-white rounded-3xl p-8 max-w-lg w-full shadow-2xl border-4 border-purple-100 relative overflow-hidden"
      >
        <div
          class="absolute top-0 left-0 right-0 h-2 bg-gradient-to-r from-purple-400 via-pink-400 to-purple-400"
        />
        <button
          class="absolute top-4 left-4 p-2 rounded-full bg-slate-100 hover:bg-slate-200 transition-colors"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-x text-slate-500"
            fill="none"
            height="20"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
        </button>
        <div
          class="mt-4"
        >
          <div
            class="text-center"
          >
            <div
              class="text-8xl mb-4"
            >
              🛡️
            </div>
            <h3
              class="text-2xl font-bold text-purple-700 mb-2"
            >
              שומר השער
            </h3>
            <p
              class="text-xl text-slate-700 leading-relaxed whitespace-pre-line mb-6"
            >
              מדהים! החיות הראשונות זוכרות את שמותיהן!
            השער נפתח לפניך. ההרפתקה מתחילה!
            </p>
          </div>
        </div>
        <button
          class="w-full mt-6 py-4 bg-gradient-to-r from-purple-500 to-pink-500 text-white rounded-2xl font-bold text-xl flex items-center justify-center gap-2 hover:shadow-lg transition-shadow"
        >
          המשך
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-right"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m9 18 6-6-6-6"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`WordAdventure Snapshot Tests > renders map state after clicking world map button 1`] = `
<div>
  <div
    class="min-h-screen bg-slate-50 font-sans text-slate-800 relative"
    dir="rtl"
  >
    <div
      class="absolute inset-0 pointer-events-none opacity-20 overflow-hidden"
    >
      <div
        class="absolute -top-20 -right-20 w-96 h-96 bg-purple-300 rounded-full blur-3xl"
      />
      <div
        class="absolute bottom-0 left-0 w-80 h-80 bg-blue-300 rounded-full blur-3xl"
      />
    </div>
    <div
      class="relative z-10 max-w-4xl mx-auto p-4"
    >
      <div
        class="flex justify-between items-center mb-6 bg-white/80 backdrop-blur rounded-2xl p-3 shadow-md"
      >
        <div
          class="flex gap-1"
        >
          <button
            aria-label="מסך הבית"
            class="p-2.5 rounded-xl text-purple-600 hover:bg-purple-50 active:scale-90 transition-transform"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-house"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
              />
              <path
                d="M3 10a2 2 0 0 1 .709-1.528l7-6a2 2 0 0 1 2.582 0l7 6A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
              />
            </svg>
          </button>
          <button
            aria-label="חנות ההפתעות"
            class="p-2.5 rounded-xl text-yellow-600 hover:bg-yellow-50 active:scale-90 transition-transform"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-shopping-bag"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 10a4 4 0 0 1-8 0"
              />
              <path
                d="M3.103 6.034h17.794"
              />
              <path
                d="M3.4 5.467a2 2 0 0 0-.4 1.2V20a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6.667a2 2 0 0 0-.4-1.2l-2-2.667A2 2 0 0 0 17 2H7a2 2 0 0 0-1.6.8z"
              />
            </svg>
          </button>
          <button
            aria-label="התיק שלי"
            class="p-2.5 rounded-xl text-blue-600 hover:bg-blue-50 active:scale-90 transition-transform"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-backpack"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 10a4 4 0 0 1 4-4h8a4 4 0 0 1 4 4v10a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2z"
              />
              <path
                d="M8 10h8"
              />
              <path
                d="M8 18h8"
              />
              <path
                d="M8 22v-6a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v6"
              />
              <path
                d="M9 6V4a2 2 0 0 1 2-2h2a2 2 0 0 1 2 2v2"
              />
            </svg>
          </button>
        </div>
        <div
          class="flex gap-4 items-center font-bold text-lg"
        >
          <span
            class="flex items-center gap-1 text-yellow-600"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-trophy"
              fill="none"
              height="18"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 14.66v1.626a2 2 0 0 1-.976 1.696A5 5 0 0 0 7 21.978"
              />
              <path
                d="M14 14.66v1.626a2 2 0 0 0 .976 1.696A5 5 0 0 1 17 21.978"
              />
              <path
                d="M18 9h1.5a1 1 0 0 0 0-5H18"
              />
              <path
                d="M4 22h16"
              />
              <path
                d="M6 9a6 6 0 0 0 12 0V3a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1z"
              />
              <path
                d="M6 9H4.5a1 1 0 0 1 0-5H6"
              />
            </svg>
             
            0
          </span>
          <span
            class="relative inline-block text-2xl"
            data-testid="avatar-with-gear"
          >
            <span>
              🧙
            </span>
          </span>
        </div>
      </div>
      <div
        class="space-y-4"
      >
        <h2
          class="text-3xl font-bold text-center mb-4"
        >
          בחר שלב
        </h2>
        <p
          class="text-center text-purple-600 mb-2"
        >
          📚 
          0
           מילים נלמדו
        </p>
        <div
          class="space-y-3"
        >
          <button
            aria-label="שער הממלכה - זמין"
            class="relative w-full bg-gradient-to-r from-green-400 to-emerald-600 text-white p-5 rounded-2xl text-right shadow-lg flex justify-between items-center transition-all hover:scale-[1.02] hover:shadow-xl"
          >
            <div
              class="flex items-center gap-4"
            >
              <div
                class="w-12 h-12 bg-white/20 rounded-full flex items-center justify-center text-2xl font-black"
              >
                1
              </div>
              <div>
                <h3
                  class="text-xl font-bold"
                >
                  שער הממלכה
                </h3>
                <p
                  class="text-sm opacity-80"
                >
                  The Kingdom Gate
                </p>
              </div>
            </div>
            <div
              class="text-4xl"
            >
              🏰
            </div>
          </button>
          <button
            aria-label="גן החיות - נעול"
            class="relative w-full bg-gradient-to-r from-lime-400 to-green-600 text-white p-5 rounded-2xl text-right shadow-lg flex justify-between items-center transition-all opacity-40 cursor-not-allowed grayscale"
            disabled=""
          >
            <div
              class="flex items-center gap-4"
            >
              <div
                class="w-12 h-12 bg-white/20 rounded-full flex items-center justify-center text-2xl font-black"
              >
                2
              </div>
              <div>
                <h3
                  class="text-xl font-bold"
                >
                  גן החיות
                </h3>
                <p
                  class="text-sm opacity-80"
                >
                  Animal Garden
                </p>
              </div>
            </div>
            <div
              class="text-4xl"
            >
              🦁
            </div>
          </button>
          <button
            aria-label="המשתה - נעול"
            class="relative w-full bg-gradient-to-r from-orange-400 to-red-500 text-white p-5 rounded-2xl text-right shadow-lg flex justify-between items-center transition-all opacity-40 cursor-not-allowed grayscale"
            disabled=""
          >
            <div
              class="flex items-center gap-4"
            >
              <div
                class="w-12 h-12 bg-white/20 rounded-full flex items-center justify-center text-2xl font-black"
              >
                3
              </div>
              <div>
                <h3
                  class="text-xl font-bold"
                >
                  המשתה
                </h3>
                <p
                  class="text-sm opacity-80"
                >
                  The Feast
                </p>
              </div>
            </div>
            <div
              class="text-4xl"
            >
              🍕
            </div>
          </button>
          <button
            aria-label="בית המשפחה - נעול"
            class="relative w-full bg-gradient-to-r from-pink-400 to-rose-500 text-white p-5 rounded-2xl text-right shadow-lg flex justify-between items-center transition-all opacity-40 cursor-not-allowed grayscale"
            disabled=""
          >
            <div
              class="flex items-center gap-4"
            >
              <div
                class="w-12 h-12 bg-white/20 rounded-full flex items-center justify-center text-2xl font-black"
              >
                4
              </div>
              <div>
                <h3
                  class="text-xl font-bold"
                >
                  בית המשפחה
                </h3>
                <p
                  class="text-sm opacity-80"
                >
                  Family Home
                </p>
              </div>
            </div>
            <div
              class="text-4xl"
            >
              👨‍👩‍👧‍👦
            </div>
          </button>
          <button
            aria-label="גשר הקשת - נעול"
            class="relative w-full bg-gradient-to-r from-violet-400 to-purple-600 text-white p-5 rounded-2xl text-right shadow-lg flex justify-between items-center transition-all opacity-40 cursor-not-allowed grayscale"
            disabled=""
          >
            <div
              class="flex items-center gap-4"
            >
              <div
                class="w-12 h-12 bg-white/20 rounded-full flex items-center justify-center text-2xl font-black"
              >
                5
              </div>
              <div>
                <h3
                  class="text-xl font-bold"
                >
                  גשר הקשת
                </h3>
                <p
                  class="text-sm opacity-80"
                >
                  Rainbow Bridge
                </p>
              </div>
            </div>
            <div
              class="text-4xl"
            >
              🌈
            </div>
          </button>
          <button
            aria-label="שביל הטבע - נעול"
            class="relative w-full bg-gradient-to-r from-teal-400 to-cyan-600 text-white p-5 rounded-2xl text-right shadow-lg flex justify-between items-center transition-all opacity-40 cursor-not-allowed grayscale"
            disabled=""
          >
            <div
              class="flex items-center gap-4"
            >
              <div
                class="w-12 h-12 bg-white/20 rounded-full flex items-center justify-center text-2xl font-black"
              >
                6
              </div>
              <div>
                <h3
                  class="text-xl font-bold"
                >
                  שביל הטבע
                </h3>
                <p
                  class="text-sm opacity-80"
                >
                  Nature Trail
                </p>
              </div>
            </div>
            <div
              class="text-4xl"
            >
              🌳
            </div>
          </button>
          <button
            aria-label="הסדנה - נעול"
            class="relative w-full bg-gradient-to-r from-amber-400 to-yellow-600 text-white p-5 rounded-2xl text-right shadow-lg flex justify-between items-center transition-all opacity-40 cursor-not-allowed grayscale"
            disabled=""
          >
            <div
              class="flex items-center gap-4"
            >
              <div
                class="w-12 h-12 bg-white/20 rounded-full flex items-center justify-center text-2xl font-black"
              >
                7
              </div>
              <div>
                <h3
                  class="text-xl font-bold"
                >
                  הסדנה
                </h3>
                <p
                  class="text-sm opacity-80"
                >
                  The Workshop
                </p>
              </div>
            </div>
            <div
              class="text-4xl"
            >
              🔨
            </div>
          </button>
          <button
            aria-label="גוף ונפש - נעול"
            class="relative w-full bg-gradient-to-r from-rose-400 to-pink-600 text-white p-5 rounded-2xl text-right shadow-lg flex justify-between items-center transition-all opacity-40 cursor-not-allowed grayscale"
            disabled=""
          >
            <div
              class="flex items-center gap-4"
            >
              <div
                class="w-12 h-12 bg-white/20 rounded-full flex items-center justify-center text-2xl font-black"
              >
                8
              </div>
              <div>
                <h3
                  class="text-xl font-bold"
                >
                  גוף ונפש
                </h3>
                <p
                  class="text-sm opacity-80"
                >
                  Body and Soul
                </p>
              </div>
            </div>
            <div
              class="text-4xl"
            >
              💪
            </div>
          </button>
          <button
            aria-label="זירת הפעולה - נעול"
            class="relative w-full bg-gradient-to-r from-red-500 to-orange-600 text-white p-5 rounded-2xl text-right shadow-lg flex justify-between items-center transition-all opacity-40 cursor-not-allowed grayscale"
            disabled=""
          >
            <div
              class="flex items-center gap-4"
            >
              <div
                class="w-12 h-12 bg-white/20 rounded-full flex items-center justify-center text-2xl font-black"
              >
                9
              </div>
              <div>
                <h3
                  class="text-xl font-bold"
                >
                  זירת הפעולה
                </h3>
                <p
                  class="text-sm opacity-80"
                >
                  Action Arena
                </p>
              </div>
            </div>
            <div
              class="text-4xl"
            >
              ⚡
            </div>
          </button>
          <button
            aria-label="היער העמוק - נעול"
            class="relative w-full bg-gradient-to-r from-emerald-600 to-teal-800 text-white p-5 rounded-2xl text-right shadow-lg flex justify-between items-center transition-all opacity-40 cursor-not-allowed grayscale"
            disabled=""
          >
            <div
              class="flex items-center gap-4"
            >
              <div
                class="w-12 h-12 bg-white/20 rounded-full flex items-center justify-center text-2xl font-black"
              >
                10
              </div>
              <div>
                <h3
                  class="text-xl font-bold"
                >
                  היער העמוק
                </h3>
                <p
                  class="text-sm opacity-80"
                >
                  The Deep Forest
                </p>
              </div>
            </div>
            <div
              class="text-4xl"
            >
              🌲
            </div>
          </button>
          <button
            aria-label="כפר המומחים - נעול"
            class="relative w-full bg-gradient-to-r from-indigo-500 to-blue-700 text-white p-5 rounded-2xl text-right shadow-lg flex justify-between items-center transition-all opacity-40 cursor-not-allowed grayscale"
            disabled=""
          >
            <div
              class="flex items-center gap-4"
            >
              <div
                class="w-12 h-12 bg-white/20 rounded-full flex items-center justify-center text-2xl font-black"
              >
                11
              </div>
              <div>
                <h3
                  class="text-xl font-bold"
                >
                  כפר המומחים
                </h3>
                <p
                  class="text-sm opacity-80"
                >
                  Expert Village
                </p>
              </div>
            </div>
            <div
              class="text-4xl"
            >
              🏘️
            </div>
          </button>
          <button
            aria-label="פסגת האלופים - נעול"
            class="relative w-full bg-gradient-to-r from-amber-500 to-red-700 text-white p-5 rounded-2xl text-right shadow-lg flex justify-between items-center transition-all opacity-40 cursor-not-allowed grayscale"
            disabled=""
          >
            <div
              class="flex items-center gap-4"
            >
              <div
                class="w-12 h-12 bg-white/20 rounded-full flex items-center justify-center text-2xl font-black"
              >
                12
              </div>
              <div>
                <h3
                  class="text-xl font-bold"
                >
                  פסגת האלופים
                </h3>
                <p
                  class="text-sm opacity-80"
                >
                  Master Summit
                </p>
              </div>
            </div>
            <div
              class="text-4xl"
            >
              🏔️
            </div>
          </button>
          <button
            aria-label="בית הספר הקסום - נעול"
            class="relative w-full bg-gradient-to-r from-sky-400 to-blue-600 text-white p-5 rounded-2xl text-right shadow-lg flex justify-between items-center transition-all opacity-40 cursor-not-allowed grayscale"
            disabled=""
          >
            <div
              class="flex items-center gap-4"
            >
              <div
                class="w-12 h-12 bg-white/20 rounded-full flex items-center justify-center text-2xl font-black"
              >
                13
              </div>
              <div>
                <h3
                  class="text-xl font-bold"
                >
                  בית הספר הקסום
                </h3>
                <p
                  class="text-sm opacity-80"
                >
                  The Magic School
                </p>
              </div>
            </div>
            <div
              class="text-4xl"
            >
              🏫
            </div>
          </button>
          <button
            aria-label="מסע הדרכים - נעול"
            class="relative w-full bg-gradient-to-r from-slate-400 to-zinc-600 text-white p-5 rounded-2xl text-right shadow-lg flex justify-between items-center transition-all opacity-40 cursor-not-allowed grayscale"
            disabled=""
          >
            <div
              class="flex items-center gap-4"
            >
              <div
                class="w-12 h-12 bg-white/20 rounded-full flex items-center justify-center text-2xl font-black"
              >
                14
              </div>
              <div>
                <h3
                  class="text-xl font-bold"
                >
                  מסע הדרכים
                </h3>
                <p
                  class="text-sm opacity-80"
                >
                  The Great Journey
                </p>
              </div>
            </div>
            <div
              class="text-4xl"
            >
              🚂
            </div>
          </button>
          <button
            aria-label="אתגר האלופים - נעול"
            class="relative w-full bg-gradient-to-r from-fuchsia-500 to-purple-700 text-white p-5 rounded-2xl text-right shadow-lg flex justify-between items-center transition-all opacity-40 cursor-not-allowed grayscale"
            disabled=""
          >
            <div
              class="flex items-center gap-4"
            >
              <div
                class="w-12 h-12 bg-white/20 rounded-full flex items-center justify-center text-2xl font-black"
              >
                15
              </div>
              <div>
                <h3
                  class="text-xl font-bold"
                >
                  אתגר האלופים
                </h3>
                <p
                  class="text-sm opacity-80"
                >
                  Champions Challenge
                </p>
              </div>
            </div>
            <div
              class="text-4xl"
            >
              🎯
            </div>
          </button>
          <button
            aria-label="כתר האגדות - נעול"
            class="relative w-full bg-gradient-to-r from-yellow-400 to-amber-700 text-white p-5 rounded-2xl text-right shadow-lg flex justify-between items-center transition-all opacity-40 cursor-not-allowed grayscale"
            disabled=""
          >
            <div
              class="flex items-center gap-4"
            >
              <div
                class="w-12 h-12 bg-white/20 rounded-full flex items-center justify-center text-2xl font-black"
              >
                16
              </div>
              <div>
                <h3
                  class="text-xl font-bold"
                >
                  כתר האגדות
                </h3>
                <p
                  class="text-sm opacity-80"
                >
                  The Legendary Crown
                </p>
              </div>
            </div>
            <div
              class="text-4xl"
            >
              👑
            </div>
          </button>
          <button
            aria-label="ארון הבגדים הקסום - נעול"
            class="relative w-full bg-gradient-to-r from-pink-400 to-fuchsia-600 text-white p-5 rounded-2xl text-right shadow-lg flex justify-between items-center transition-all opacity-40 cursor-not-allowed grayscale"
            disabled=""
          >
            <div
              class="flex items-center gap-4"
            >
              <div
                class="w-12 h-12 bg-white/20 rounded-full flex items-center justify-center text-2xl font-black"
              >
                17
              </div>
              <div>
                <h3
                  class="text-xl font-bold"
                >
                  ארון הבגדים הקסום
                </h3>
                <p
                  class="text-sm opacity-80"
                >
                  The Magic Wardrobe
                </p>
              </div>
            </div>
            <div
              class="text-4xl"
            >
              👗
            </div>
          </button>
          <button
            aria-label="ממלכת מזג האוויר - נעול"
            class="relative w-full bg-gradient-to-r from-sky-400 to-indigo-600 text-white p-5 rounded-2xl text-right shadow-lg flex justify-between items-center transition-all opacity-40 cursor-not-allowed grayscale"
            disabled=""
          >
            <div
              class="flex items-center gap-4"
            >
              <div
                class="w-12 h-12 bg-white/20 rounded-full flex items-center justify-center text-2xl font-black"
              >
                18
              </div>
              <div>
                <h3
                  class="text-xl font-bold"
                >
                  ממלכת מזג האוויר
                </h3>
                <p
                  class="text-sm opacity-80"
                >
                  The Weather Kingdom
                </p>
              </div>
            </div>
            <div
              class="text-4xl"
            >
              ⛅
            </div>
          </button>
          <button
            aria-label="אצטדיון הגיבורים - נעול"
            class="relative w-full bg-gradient-to-r from-green-500 to-emerald-700 text-white p-5 rounded-2xl text-right shadow-lg flex justify-between items-center transition-all opacity-40 cursor-not-allowed grayscale"
            disabled=""
          >
            <div
              class="flex items-center gap-4"
            >
              <div
                class="w-12 h-12 bg-white/20 rounded-full flex items-center justify-center text-2xl font-black"
              >
                19
              </div>
              <div>
                <h3
                  class="text-xl font-bold"
                >
                  אצטדיון הגיבורים
                </h3>
                <p
                  class="text-sm opacity-80"
                >
                  Heroes Stadium
                </p>
              </div>
            </div>
            <div
              class="text-4xl"
            >
              ⚽
            </div>
          </button>
          <button
            aria-label="ארץ הצעצועים - נעול"
            class="relative w-full bg-gradient-to-r from-amber-400 to-orange-600 text-white p-5 rounded-2xl text-right shadow-lg flex justify-between items-center transition-all opacity-40 cursor-not-allowed grayscale"
            disabled=""
          >
            <div
              class="flex items-center gap-4"
            >
              <div
                class="w-12 h-12 bg-white/20 rounded-full flex items-center justify-center text-2xl font-black"
              >
                20
              </div>
              <div>
                <h3
                  class="text-xl font-bold"
                >
                  ארץ הצעצועים
                </h3>
                <p
                  class="text-sm opacity-80"
                >
                  Toyland
                </p>
              </div>
            </div>
            <div
              class="text-4xl"
            >
              🧸
            </div>
          </button>
          <button
            aria-label="אליפות העולם של המילים - נעול"
            class="relative w-full bg-gradient-to-r from-indigo-500 to-purple-800 text-white p-5 rounded-2xl text-right shadow-lg flex justify-between items-center transition-all opacity-40 cursor-not-allowed grayscale"
            disabled=""
          >
            <div
              class="flex items-center gap-4"
            >
              <div
                class="w-12 h-12 bg-white/20 rounded-full flex items-center justify-center text-2xl font-black"
              >
                21
              </div>
              <div>
                <h3
                  class="text-xl font-bold"
                >
                  אליפות העולם של המילים
                </h3>
                <p
                  class="text-sm opacity-80"
                >
                  The World Word Championship
                </p>
              </div>
            </div>
            <div
              class="text-4xl"
            >
              🌍
            </div>
          </button>
          <button
            class="w-full bg-gradient-to-r from-yellow-400 to-orange-500 text-white p-5 rounded-2xl text-right shadow-lg flex justify-between items-center hover:scale-[1.02] hover:shadow-xl transition-all"
          >
            <div
              class="flex items-center gap-4"
            >
              <div
                class="w-12 h-12 bg-white/20 rounded-full flex items-center justify-center text-2xl"
              >
                🧠
              </div>
              <div>
                <h3
                  class="text-xl font-bold"
                >
                  חזרות חכמות
                </h3>
                <p
                  class="text-sm opacity-80"
                >
                  Smart Review
                </p>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WordAdventure Snapshot Tests > renders playing state after navigating to a level 1`] = `
<div>
  <div
    class="min-h-screen bg-slate-50 font-sans text-slate-800 relative"
    dir="rtl"
  >
    <div
      class="absolute inset-0 pointer-events-none opacity-20 overflow-hidden"
    >
      <div
        class="absolute -top-20 -right-20 w-96 h-96 bg-purple-300 rounded-full blur-3xl"
      />
      <div
        class="absolute bottom-0 left-0 w-80 h-80 bg-blue-300 rounded-full blur-3xl"
      />
    </div>
    <div
      class="relative z-10 max-w-4xl mx-auto p-4"
    >
      <div
        class="flex justify-between items-center mb-6 bg-white/80 backdrop-blur rounded-2xl p-3 shadow-md"
      >
        <div
          class="flex gap-1"
        >
          <button
            aria-label="מסך הבית"
            class="p-2.5 rounded-xl text-purple-600 hover:bg-purple-50 active:scale-90 transition-transform"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-house"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
              />
              <path
                d="M3 10a2 2 0 0 1 .709-1.528l7-6a2 2 0 0 1 2.582 0l7 6A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
              />
            </svg>
          </button>
          <button
            aria-label="חנות ההפתעות"
            class="p-2.5 rounded-xl text-yellow-600 hover:bg-yellow-50 active:scale-90 transition-transform"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-shopping-bag"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 10a4 4 0 0 1-8 0"
              />
              <path
                d="M3.103 6.034h17.794"
              />
              <path
                d="M3.4 5.467a2 2 0 0 0-.4 1.2V20a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6.667a2 2 0 0 0-.4-1.2l-2-2.667A2 2 0 0 0 17 2H7a2 2 0 0 0-1.6.8z"
              />
            </svg>
          </button>
          <button
            aria-label="התיק שלי"
            class="p-2.5 rounded-xl text-blue-600 hover:bg-blue-50 active:scale-90 transition-transform"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-backpack"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 10a4 4 0 0 1 4-4h8a4 4 0 0 1 4 4v10a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2z"
              />
              <path
                d="M8 10h8"
              />
              <path
                d="M8 18h8"
              />
              <path
                d="M8 22v-6a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v6"
              />
              <path
                d="M9 6V4a2 2 0 0 1 2-2h2a2 2 0 0 1 2 2v2"
              />
            </svg>
          </button>
        </div>
        <div
          class="flex gap-4 items-center font-bold text-lg"
        >
          <span
            class="flex items-center gap-1 text-yellow-600"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-trophy"
              fill="none"
              height="18"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 14.66v1.626a2 2 0 0 1-.976 1.696A5 5 0 0 0 7 21.978"
              />
              <path
                d="M14 14.66v1.626a2 2 0 0 0 .976 1.696A5 5 0 0 1 17 21.978"
              />
              <path
                d="M18 9h1.5a1 1 0 0 0 0-5H18"
              />
              <path
                d="M4 22h16"
              />
              <path
                d="M6 9a6 6 0 0 0 12 0V3a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1z"
              />
              <path
                d="M6 9H4.5a1 1 0 0 1 0-5H6"
              />
            </svg>
             
            0
          </span>
          <span
            class="relative inline-block text-2xl"
            data-testid="avatar-with-gear"
          >
            <span>
              🧙
            </span>
          </span>
        </div>
      </div>
      <div
        class="max-w-xl mx-auto"
      >
        <div
          class="relative flex justify-center gap-2 mb-6"
        >
          <svg
            aria-label="חיה פעילה"
            class="lucide lucide-heart text-red-500"
            fill="#ef4444"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
            />
          </svg>
          <svg
            aria-label="חיה פעילה"
            class="lucide lucide-heart text-red-500"
            fill="#ef4444"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
            />
          </svg>
          <svg
            aria-label="חיה פעילה"
            class="lucide lucide-heart text-red-500"
            fill="#ef4444"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
            />
          </svg>
        </div>
        <div
          class="bg-white rounded-3xl p-8 shadow-2xl text-center border-b-8 border-purple-100 relative overflow-hidden"
        >
          <div
            class="text-center"
          >
            <span
              class="text-slate-400 text-sm tracking-widest font-bold"
            >
              תרגם
               את ה
              מילה
            </span>
            <div
              class="flex items-center justify-center gap-3 my-6"
            >
              <h2
                class="text-6xl font-black text-slate-800 leading-tight"
              >
                חתול
              </h2>
            </div>
            <p
              class="text-slate-500 text-lg mt-2 mb-4 leading-relaxed"
              dir="rtl"
            >
              🐱 חיה שאוהבת חלב
            </p>
            <div
              class="w-full"
            >
              <div
                class="relative mb-4"
              >
                <div
                  class="min-h-[60px] bg-white border-4 border-slate-100 rounded-2xl p-4 flex flex-wrap items-center justify-center gap-1"
                  dir="ltr"
                >
                  <span
                    class="text-slate-400 text-lg"
                  >
                    לחץ על האותיות...
                  </span>
                </div>
                <div
                  class="absolute left-2 top-1/2 -translate-y-1/2 flex gap-2"
                >
                  <button
                    class="p-2 rounded-full bg-slate-100 text-slate-500 hover:bg-slate-200 disabled:opacity-30 active:scale-90 transition-transform"
                    disabled=""
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-delete"
                      fill="none"
                      height="20"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M10 5a2 2 0 0 0-1.344.519l-6.328 5.74a1 1 0 0 0 0 1.481l6.328 5.741A2 2 0 0 0 10 19h10a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2z"
                      />
                      <path
                        d="m12 9 6 6"
                      />
                      <path
                        d="m18 9-6 6"
                      />
                    </svg>
                  </button>
                  <button
                    class="p-2 rounded-full bg-slate-100 text-slate-500 hover:bg-slate-200 disabled:opacity-30 active:scale-90 transition-transform"
                    disabled=""
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-rotate-ccw"
                      fill="none"
                      height="20"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
                      />
                      <path
                        d="M3 3v5h5"
                      />
                    </svg>
                  </button>
                </div>
              </div>
              <div
                class="flex flex-wrap justify-center gap-2 mb-6"
                dir="ltr"
              >
                <button
                  class="font-bold font-mono shadow-md transition-all active:shadow-sm w-14 h-16 text-3xl rounded-xl bg-gradient-to-b from-yellow-300 to-yellow-400 text-yellow-800 hover:from-yellow-400 hover:to-yellow-500"
                >
                  C
                </button>
                <button
                  class="font-bold font-mono shadow-md transition-all active:shadow-sm w-14 h-16 text-3xl rounded-xl bg-gradient-to-b from-yellow-300 to-yellow-400 text-yellow-800 hover:from-yellow-400 hover:to-yellow-500"
                >
                  T
                </button>
                <button
                  class="font-bold font-mono shadow-md transition-all active:shadow-sm w-14 h-16 text-3xl rounded-xl bg-gradient-to-b from-yellow-300 to-yellow-400 text-yellow-800 hover:from-yellow-400 hover:to-yellow-500"
                >
                  A
                </button>
              </div>
              <button
                class="w-full py-4 bg-gradient-to-r from-purple-600 to-pink-600 text-white rounded-2xl font-bold text-xl shadow-lg disabled:opacity-50 disabled:cursor-not-allowed active:shadow-md transition-shadow"
                disabled=""
              >
                בדיקה ✓
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WordAdventure Snapshot Tests > renders start state (main menu) when userProfile exists 1`] = `
<div>
  <div
    class="min-h-screen bg-slate-50 font-sans text-slate-800 relative"
    dir="rtl"
  >
    <div
      class="absolute inset-0 pointer-events-none opacity-20 overflow-hidden"
    >
      <div
        class="absolute -top-20 -right-20 w-96 h-96 bg-purple-300 rounded-full blur-3xl"
      />
      <div
        class="absolute bottom-0 left-0 w-80 h-80 bg-blue-300 rounded-full blur-3xl"
      />
    </div>
    <div
      class="relative z-10 max-w-4xl mx-auto p-4"
    >
      <div
        class="flex justify-between items-center mb-6 bg-white/80 backdrop-blur rounded-2xl p-3 shadow-md"
      >
        <div
          class="flex gap-1"
        >
          <button
            aria-label="מסך הבית"
            class="p-2.5 rounded-xl text-purple-600 hover:bg-purple-50 active:scale-90 transition-transform"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-house"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
              />
              <path
                d="M3 10a2 2 0 0 1 .709-1.528l7-6a2 2 0 0 1 2.582 0l7 6A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
              />
            </svg>
          </button>
          <button
            aria-label="חנות ההפתעות"
            class="p-2.5 rounded-xl text-yellow-600 hover:bg-yellow-50 active:scale-90 transition-transform"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-shopping-bag"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 10a4 4 0 0 1-8 0"
              />
              <path
                d="M3.103 6.034h17.794"
              />
              <path
                d="M3.4 5.467a2 2 0 0 0-.4 1.2V20a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6.667a2 2 0 0 0-.4-1.2l-2-2.667A2 2 0 0 0 17 2H7a2 2 0 0 0-1.6.8z"
              />
            </svg>
          </button>
          <button
            aria-label="התיק שלי"
            class="p-2.5 rounded-xl text-blue-600 hover:bg-blue-50 active:scale-90 transition-transform"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-backpack"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 10a4 4 0 0 1 4-4h8a4 4 0 0 1 4 4v10a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2z"
              />
              <path
                d="M8 10h8"
              />
              <path
                d="M8 18h8"
              />
              <path
                d="M8 22v-6a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v6"
              />
              <path
                d="M9 6V4a2 2 0 0 1 2-2h2a2 2 0 0 1 2 2v2"
              />
            </svg>
          </button>
        </div>
        <div
          class="flex gap-4 items-center font-bold text-lg"
        >
          <span
            class="flex items-center gap-1 text-yellow-600"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-trophy"
              fill="none"
              height="18"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 14.66v1.626a2 2 0 0 1-.976 1.696A5 5 0 0 0 7 21.978"
              />
              <path
                d="M14 14.66v1.626a2 2 0 0 0 .976 1.696A5 5 0 0 1 17 21.978"
              />
              <path
                d="M18 9h1.5a1 1 0 0 0 0-5H18"
              />
              <path
                d="M4 22h16"
              />
              <path
                d="M6 9a6 6 0 0 0 12 0V3a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1z"
              />
              <path
                d="M6 9H4.5a1 1 0 0 1 0-5H6"
              />
            </svg>
             
            0
          </span>
          <span
            class="relative inline-block text-2xl"
            data-testid="avatar-with-gear"
          >
            <span>
              🧙
            </span>
          </span>
        </div>
      </div>
      <div
        class="text-center py-6"
      >
        <h1
          class="text-6xl font-black mb-2 text-transparent bg-clip-text bg-gradient-to-r from-purple-600 to-pink-500"
        >
          Word Adventure
        </h1>
        <h2
          class="text-xl font-bold text-purple-400 mb-8"
        >
          שלום
           
          Test
          ! 
          מוכן להרפתקה?
        </h2>
        <div
          class="bg-white/80 rounded-2xl p-4 text-center shadow-sm mb-4 max-w-4xl mx-auto"
        >
          <div
            class="text-2xl font-bold text-purple-600"
          >
            0
            /
            424
             
            מילים נשלטו
          </div>
          <div
            class="text-sm text-slate-500"
          >
            0
             
            מילים בתהליך
          </div>
          <div
            class="w-full bg-gray-200 rounded-full h-3 mt-2"
          >
            <div
              class="bg-gradient-to-r from-purple-500 to-pink-500 h-3 rounded-full transition-all duration-500"
              style="width: 0%;"
            />
          </div>
        </div>
        <div
          class="grid grid-cols-1 md:grid-cols-2 gap-4 max-w-4xl mx-auto mb-10"
        >
          <div
            class="md:col-span-2"
          >
            <div
              class="bg-white rounded-3xl p-6 shadow-lg border-2 border-orange-100"
            >
              <h3
                class="text-2xl font-bold mb-4 text-orange-600"
              >
                📜 
                משימות יומיות
              </h3>
              <div
                class="space-y-4"
              >
                <div
                  class="relative"
                >
                  <div
                    class="flex justify-between items-center mb-1"
                  >
                    <span
                      class="font-bold text-slate-700"
                    >
                      השלם 10 מילים
                    </span>
                    <span
                      class="text-sm font-mono bg-orange-100 text-orange-700 px-2 py-1 rounded-lg"
                    >
                      0
                      /
                      10
                    </span>
                  </div>
                  <div
                    class="h-3 w-full bg-slate-100 rounded-full overflow-hidden"
                  >
                    <div
                      class="h-full bg-orange-400"
                    />
                  </div>
                </div>
                <div
                  class="relative"
                >
                  <div
                    class="flex justify-between items-center mb-1"
                  >
                    <span
                      class="font-bold text-slate-700"
                    >
                      הגע ל-1000 נקודות
                    </span>
                    <span
                      class="text-sm font-mono bg-orange-100 text-orange-700 px-2 py-1 rounded-lg"
                    >
                      0
                      /
                      1000
                    </span>
                  </div>
                  <div
                    class="h-3 w-full bg-slate-100 rounded-full overflow-hidden"
                  >
                    <div
                      class="h-full bg-orange-400"
                    />
                  </div>
                </div>
                <div
                  class="relative"
                >
                  <div
                    class="flex justify-between items-center mb-1"
                  >
                    <span
                      class="font-bold text-slate-700"
                    >
                      בצע רצף של 5
                    </span>
                    <span
                      class="text-sm font-mono bg-orange-100 text-orange-700 px-2 py-1 rounded-lg"
                    >
                      0
                      /
                      5
                    </span>
                  </div>
                  <div
                    class="h-3 w-full bg-slate-100 rounded-full overflow-hidden"
                  >
                    <div
                      class="h-full bg-orange-400"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <button
            aria-label="אמץ כלבלב וצא לטיול"
            class="md:col-span-2 relative overflow-hidden bg-gradient-to-r from-emerald-400 via-teal-400 to-sky-400 text-white p-8 rounded-3xl shadow-xl hover:shadow-2xl hover:scale-[1.01] active:scale-[0.99] transition-all text-right"
          >
            <div
              aria-hidden="true"
              class="absolute -left-4 -bottom-6 text-[7rem] opacity-30 rotate-12"
            >
              🐾
            </div>
            <div
              class="flex items-center justify-between gap-4"
            >
              <div>
                <div
                  class="text-3xl md:text-4xl font-black mb-1"
                >
                  🐕 הטיול הגדול 
                </div>
                <div
                  class="text-lg opacity-95 font-bold"
                >
                  אמץ כלבלב חינם וצא להרפתקה הראשונה שלכם!
                </div>
              </div>
              <div
                aria-hidden="true"
                class="text-6xl md:text-7xl"
              >
                🐕
              </div>
            </div>
          </button>
          <button
            class="bg-gradient-to-r from-yellow-400 to-orange-500 text-white p-6 rounded-3xl shadow-lg hover:shadow-xl transition-all"
          >
            <div
              class="text-4xl mb-2"
            >
              🧠
            </div>
            <div
              class="text-2xl font-bold"
            >
              חזרה חכמה
            </div>
            <div
              class="text-sm opacity-90"
            >
              הדרך הכי טובה לזכור!
            </div>
          </button>
          <button
            class="bg-gradient-to-r from-blue-400 to-indigo-500 text-white p-6 rounded-3xl shadow-lg hover:shadow-xl transition-all"
          >
            <div
              class="text-4xl mb-2"
            >
              🌍
            </div>
            <div
              class="text-2xl font-bold"
            >
              מפת עולמות
            </div>
            <div
              class="text-sm opacity-90"
            >
              שחק שלבים חדשים
            </div>
          </button>
          <button
            class="bg-gradient-to-r from-purple-400 to-pink-500 text-white p-6 rounded-3xl shadow-lg hover:shadow-xl transition-all"
          >
            <div
              class="text-4xl mb-2"
            >
              🃏
            </div>
            <div
              class="text-2xl font-bold"
            >
              משחק הזיכרון
            </div>
            <div
              class="text-sm opacity-90"
            >
              אימון למוח
            </div>
          </button>
          <button
            class="bg-gradient-to-r from-cyan-400 to-blue-500 text-white p-6 rounded-3xl shadow-lg hover:shadow-xl transition-all"
          >
            <div
              class="text-4xl mb-2"
            >
              📖
            </div>
            <div
              class="text-2xl font-bold"
            >
              מילון
            </div>
            <div
              class="text-sm opacity-90"
            >
              עיין במילים שלמדת
            </div>
          </button>
          <button
            class="bg-white text-slate-700 border-2 border-slate-100 p-6 rounded-3xl shadow-lg hover:bg-slate-50 transition-all"
          >
            <div
              class="text-4xl mb-2"
            >
              🛍️
            </div>
            <div
              class="text-2xl font-bold"
            >
              חנות ההפתעות
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WordAdventure Snapshot Tests > renders welcome state when no userProfile exists 1`] = `
<div>
  <div
    class="min-h-screen bg-gradient-to-br from-purple-400 to-blue-500 flex items-center justify-center p-4"
  >
    <div
      class="bg-white rounded-3xl p-8 shadow-2xl max-w-md w-full text-center"
      dir="rtl"
    >
      <h1
        class="text-4xl font-black mb-6 text-purple-600"
      >
        ברוכים הבאים!
      </h1>
      <p
        class="text-xl mb-8 text-slate-600"
      >
        מי משחק איתנו היום?
      </p>
      <form
        class="space-y-6"
      >
        <div
          class="flex justify-center gap-4"
        >
          <button
            class="p-4 rounded-xl border-4 transition-all border-transparent bg-slate-50 hover:bg-blue-50"
            type="button"
          >
            <span
              class="text-5xl block mb-2"
            >
              👦
            </span>
            <span
              class="font-bold text-blue-600 block"
            >
              ילד
            </span>
          </button>
          <button
            class="p-4 rounded-xl border-4 transition-all border-transparent bg-slate-50 hover:bg-pink-50"
            type="button"
          >
            <span
              class="text-5xl block mb-2"
            >
              👧
            </span>
            <span
              class="font-bold text-pink-600 block"
            >
              ילדה
            </span>
          </button>
        </div>
        <input
          class="w-full text-center text-2xl p-4 rounded-xl border-2 border-slate-200 focus:border-purple-500 focus:outline-none"
          dir="rtl"
          placeholder="איך קוראים לך?"
          type="text"
          value=""
        />
        <button
          class="w-full bg-gradient-to-r from-purple-600 to-pink-600 text-white text-2xl font-bold py-4 rounded-xl shadow-lg disabled:opacity-50 disabled:cursor-not-allowed hover:shadow-xl transition-transform active:scale-95"
          disabled=""
          type="submit"
        >
          מתחילים! 🚀
        </button>
      </form>
    </div>
  </div>
</div>
`;
